fix: wrapping

--- a/src/containers/contact/Contact.scss
+++ b/src/containers/contact/Contact.scss
@@ -41,8 +41,14 @@
   margin-top: 1.5rem;
 }
 
+.contact-btn-div {
+  margin-top: 20px;
+  display: none;
+}
+
 .contact-margin-top {
   margin-top: 4rem;
+  margin-bottom: 4rem;
 }
 
 .contact-image-div > img {
@@ -55,33 +61,37 @@
 /* Media Query */
 @media (max-width: 1380px), (max-width: 768px) {
   .contact-title {
-    font-size: 56px;
+    font-size: 40px;
     font-weight: 400;
     text-align: center;
   }
 
-  .contact-title {
-    font-size: 40px;
-    text-align: center;
-  }
-
   .contact-subtitle {
-    font-size: 16px;
-    line-height: normal;
+    font-size: 14px;
+    line-height: 1.5;
     text-align: center;
+    word-wrap: break-word;
   }
 
   .contact-text-div {
     text-align: center;
     margin-top: 1.5rem;
+    padding-bottom: 2rem;
   }
 
   .contact-detail,
   .contact-detail-email {
-    font-size: 20px;
+    font-size: 18px;
+    word-wrap: break-word;
+    display: inline-block;
   }
 
   .contact-image-div {
     display: none;
+  }
+
+  .contact-btn-div {
+    display: block;
+    text-align: center;
   }
 }
